--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "devc_capstone_project_frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://oreoluwa-bs.github.io",
+  "homepage": "https://oreoluwa-bs.github.io/DevC_Capstone_Project_Frontend/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
